# comic_viewer

./: .gitignore  LICENSE  README.md  comic_viewer.bat  pyproject.toml  redViewer.bat
.github/workflows/: release.yml  sync.yml
backend/: app.py  pyproject.toml  requirements.txt  settings  settings.yml
backend/api/: __init__.py
backend/api/routes/: comic.py  kemono.py
backend/requirements/: linux.txt  macos.txt  windows.txt
backend/utils/: __init__.py  conf_sample.yml
deploy/: init.py  packer.py  update.py
deploy/launcher/: comic_viewer.bat
deploy/online_scripts/: linux.sh  macos.sh  windows.ps1
doc/: deploy.md
docs/_github/: preset.md  release_notes.md
frontend/: comic_viewer_start.bat  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/components/: TopBtnGroup.vue  TopBtnGroupOfBook.vue  bookHandleBtn.vue  darkModeBtn.vue  topBottom.vue
frontend/src/components/func/: slider.vue
frontend/src/router/: index.js
frontend/src/static/: store.js
frontend/src/styles/: book.scss  books_list.scss  empty.scss
frontend/src/utils/: settings.js
frontend/src/view/: book.vue  books_list.vue  comic.vue  kemono.vue  kemono_book.vue  kemono_books.vue  kemono_books_list.vue
launcher/: comic_viewer.bat
