[project]
name = "backend"
version = "1.2.3"
description = "Add your description here"
requires-python = ""
dependencies = [
    "fastapi",
    "httpx",
    "py7zr",
    "pydantic",
    "pyyaml",
    "send2trash",
    "starlette",
    "tqdm",
    "uvicorn>=0.30.1",
    "watchfiles",
]
[[tool.uv.index]]
url = "https://repo.huaweicloud.com/repository/pypi/simple"
default = true